load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@rules_rust//rust:defs.bzl", "rust_clippy", "rustfmt_test")
load("//tools/bazel:rust_targets.bzl", "RUST_CRATE_TARGETS", "RUST_UNIT_TEST_TARGETS")
load("//tools/bazel:shell_test_compat.bzl", "shell_script_test", "transition_shell_test")

package(default_visibility = ["//visibility:public"])

exports_files([
    "check_sqlx_offline_data.sh",
    "check_release_artifacts.sh",
    "check_supply_chain_evidence.sh",
    "generate_release_file_sbom.sh",
    "generate_supply_chain_evidence_manifest.sh",
    "run_biome_check.mjs",
])

filegroup(
    name = "sqlx_cargo_metadata_stub",
    srcs = ["sqlx_cargo_metadata_stub.sh"],
)

FRONTEND_TRANSITION_TAGS = [
    "manual",
    "local",
    "no-sandbox",
]

GUARDRAIL_TRANSITION_TAGS = [
    "manual",
    "local",
    "no-sandbox",
    "no-cache",
    "external",
]

js_test(
    name = "frontend_lint",
    chdir = ".",
    copy_data_to_bin = False,
    data = [
        "//:biome_lint_inputs",
        "//:node_modules/@biomejs/biome",
    ],
    entry_point = "run_biome_check.mjs",
    fixed_args = ["check"],
)

test_suite(
    name = "frontend_typecheck_bazel",
    tests = [
        "//apps/web:typecheck",
        "//packages/api-types:typecheck",
        "//packages/ui:typecheck",
    ],
)

test_suite(
    name = "frontend_typecheck",
    tests = [":frontend_typecheck_bazel"],
)

test_suite(
    name = "frontend_unit_test_vitest",
    tests = ["//apps/web:vitest_unit_test"],
)

test_suite(
    name = "frontend_unit_test",
    tests = [":frontend_unit_test_vitest"],
)

test_suite(
    name = "frontend_build_bazel",
    tags = [
        "manual",
        "local",
    ],
    tests = ["//apps/web:next_production_build_smoke_test"],
)

test_suite(
    name = "frontend_build",
    tags = [
        "manual",
        "local",
    ],
    tests = [":frontend_build_bazel"],
)

test_suite(
    name = "frontend_bundle_bazel",
    tags = [
        "manual",
        "local",
    ],
    tests = ["//apps/web:bundle_size_test"],
)

test_suite(
    name = "frontend_bundle",
    tags = [
        "manual",
        "local",
    ],
    tests = [":frontend_bundle_bazel"],
)

test_suite(
    name = "frontend_e2e_playwright",
    tags = FRONTEND_TRANSITION_TAGS,
    tests = ["//apps/web:playwright_e2e_test"],
)

test_suite(
    name = "frontend_e2e",
    tags = FRONTEND_TRANSITION_TAGS,
    tests = [":frontend_e2e_playwright"],
)

transition_shell_test(
    name = "ci_node_audit_transition",
    srcs = ["run_ci_transition_task.sh"],
    script_args = ["node-audit"],
    tags = FRONTEND_TRANSITION_TAGS,
)

rustfmt_test(
    name = "rustfmt_check",
    targets = RUST_CRATE_TARGETS,
    tags = [
        "manual",
        "local",
    ],
)

rust_clippy(
    name = "rust_clippy",
    deps = RUST_CRATE_TARGETS,
    testonly = True,
)

test_suite(
    name = "rust_check",
    tests = RUST_UNIT_TEST_TARGETS,
)

transition_shell_test(
    name = "ci_cargo_deny_transition",
    srcs = ["run_ci_transition_task.sh"],
    script_args = ["cargo-deny"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "ci_coverage_tarpaulin_transition",
    srcs = ["run_ci_transition_task.sh"],
    script_args = ["coverage-tarpaulin"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

shell_script_test(
    name = "sqlx_offline_metadata_check",
    srcs = ["check_sqlx_offline_data.sh"],
    data = ["//:sqlx_offline_data"],
    tags = [
        "manual",
        "local",
    ],
)

transition_shell_test(
    name = "ci_migration_v001_full_transition",
    srcs = ["run_ci_transition_task.sh"],
    script_args = ["migration-v001-full"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "ci_migration_v002_audit_immutable_transition",
    srcs = ["run_ci_transition_task.sh"],
    script_args = ["migration-v002-audit-immutable"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "ci_walking_skeleton_e2e_transition",
    srcs = ["run_ci_transition_task.sh"],
    script_args = ["walking-skeleton-e2e"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "guardrail_no_fake_pass",
    srcs = ["run_guardrail_task.sh"],
    script_args = ["no-fake-pass"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "guardrail_forbidden_implementation_markers",
    srcs = ["run_guardrail_task.sh"],
    script_args = ["forbidden-implementation-markers"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "guardrail_file_line_limit",
    srcs = ["run_guardrail_task.sh"],
    script_args = ["file-line-limit"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "guardrail_catalog_m1_boundary",
    srcs = ["run_guardrail_task.sh"],
    script_args = ["catalog-m1-boundary"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "guardrail_markdown_links",
    srcs = ["run_guardrail_task.sh"],
    script_args = ["markdown-links"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "guardrail_workspace_typecheck_coverage",
    srcs = ["run_guardrail_task.sh"],
    script_args = ["workspace-typecheck-coverage"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "guardrail_platform_core_boundary",
    srcs = ["run_guardrail_task.sh"],
    script_args = ["platform-core-boundary"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "guardrail_platform_core_dependency_boundary",
    srcs = ["run_guardrail_task.sh"],
    script_args = ["platform-core-dependency-boundary"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "guardrail_platform_core_catalog_api_contract",
    srcs = ["run_guardrail_task.sh"],
    script_args = ["platform-core-catalog-api-contract"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "guardrail_platform_core_event_receiver_contract",
    srcs = ["run_guardrail_task.sh"],
    script_args = ["platform-core-event-receiver-contract"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "guardrail_pnu_anchor_pbf_marker_contract",
    srcs = ["run_guardrail_task.sh"],
    script_args = ["pnu-anchor-pbf-marker-contract"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "guardrail_platform_core_anchor_inbox_db_approval",
    srcs = ["run_guardrail_task.sh"],
    script_args = ["platform-core-anchor-inbox-db-approval"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "guardrail_platform_integration_policy",
    srcs = ["run_guardrail_task.sh"],
    script_args = ["platform-integration-policy"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "guardrail_lakehouse_registry_integration",
    srcs = ["run_guardrail_task.sh"],
    script_args = ["lakehouse-registry-integration"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "guardrail_traffic_auth_policy_registry",
    srcs = ["run_guardrail_task.sh"],
    script_args = ["traffic-auth-policy-registry"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "guardrail_github_actions_node_runtime",
    srcs = ["run_guardrail_task.sh"],
    script_args = ["github-actions-node-runtime"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)

transition_shell_test(
    name = "guardrail_load_test_assets",
    srcs = ["run_guardrail_task.sh"],
    script_args = ["load-test-assets"],
    tags = GUARDRAIL_TRANSITION_TAGS,
)
