[package]
name = "r2-public-data-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "공짱 R2 (Cloudflare R2, S3-호환) PMTiles + JSON 인덱스 reader"

[dependencies]
parcel-domain = { path = "../../domain/core/parcel", version = "0.1.0" }
building-domain = { path = "../../domain/core/building", version = "0.1.0" }
industrial-complex-domain = { path = "../../domain/core/industrial-complex", version = "0.1.0" }
shared-kernel = { path = "../../domain/core/shared-kernel", version = "0.1.0" }
circuit-breaker = { path = "../../circuit-breaker", version = "0.1.0" }
raw-capture-client = { path = "../raw-capture", version = "0.1.0" }
async-trait = { workspace = true }
chrono = { workspace = true }
geo-types = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }

[lints]
workspace = true
